--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<h1>hi</h1>
+<h1>hi 2</h1>
   <h2> Redirecting you to https </h2>
 <script>
   
-if (location.protocol !== 'https:') {
-    location.replace(`https:${location.href.substring(location.protocol.length)}`);
+if (window.location.protocol !== 'https:') {
+    window.location.replace(`https:${location.href.substring(location.protocol.length)}`);
 }
   
 </script>
